--- a/Documentation/final_report_v1.tex
+++ b/Documentation/final_report_v1.tex
@@ -113,14 +113,14 @@
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Authors:}\\
-\textsc{Nagarajan, Ganesh \ Madhavan, Sarvothaman \ Pagadala, Siddhartha} 
+\textsc{Jayasankar, Siddharth \ Nagarajan, Ganesh \ Madhavan, Sarvothaman } 
 \end{flushleft}
 \end{minipage}
 ~
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
 \emph{Supervisor:} \\
-\textsc{Dr. Mehmet, Dalkilic} 
+\textsc{Dr. Dalkilic, Mehmet} 
 \end{flushright}
 \end{minipage}\\[2cm]
 
@@ -161,14 +161,15 @@ Thus, primary interest of this study if to understand the time difference betwee
 \clearpage
 
 \section{Problem Description}
-\subsection{Presentation of case study}
-\subsection{Mathematical formulation}
-\section{Data Description}
-\subsection{Existing model}
-\subsection{Proposed model}
-\section{Computational Implementation}
-\section{Visualizations}
-\section{Proposed Changes}
+\section{Constraints}
+\section{Data Management}
+\subsection{Data Model}
+\subsection{Data Preparation}
+\section{Exploratory Analysis}
+\section{Reporting}
+\section{Visualization}
+\section{Statistical Model}
+\section{Future Work}
 \section{Concluding remarks}
 \section{References}
 
