Added db images

--- a/Documentation/final_report_v1.tex
+++ b/Documentation/final_report_v1.tex
@@ -163,7 +163,21 @@ Thus, primary interest of this study if to understand the time difference betwee
 \section{Problem Description}
 \section{Constraints}
 \section{Data Management}
-\subsection{Data Model}
+\subsection{Source Data Model}
+Text Explanation here\\
+\includegraphics[scale=0.3]{resources/dbmap_access}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.3]{resources/IU_access}\\[1cm] 
+\subsection{Intermediate Model}
+\includegraphics[scale=0.3]{resources/Inter_schedule}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.3]{resources/Inter_runs}\\[1cm] 
+Text Explanation here\\
+\subsection{Final Data Model}
+Text Explanation here\\
+\includegraphics[scale=0.3]{resources/Source_spring}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.3]{resources/wh}\\[1cm] 
 \subsection{Data Preparation}
 \section{Exploratory Analysis}
 \section{Reporting}
@@ -172,5 +186,4 @@ Thus, primary interest of this study if to understand the time difference betwee
 \section{Future Work}
 \section{Concluding remarks}
 \section{References}
-
 \end{document}
