Added all screenshots

--- a/Documentation/final_report_v1.tex
+++ b/Documentation/final_report_v1.tex
@@ -134,7 +134,7 @@
 %   LOGO SECTION
 %----------------------------------------------------------------------------------------
 
-\includegraphics[scale=0.3]{iu_logo}\\[1cm] 
+\includegraphics[scale=0.5]{iu_logo}\\[1cm] 
 %----------------------------------------------------------------------------------------
 
 \vfill 
@@ -165,24 +165,53 @@ Thus, primary interest of this study if to understand the time difference betwee
 \section{Data Management}
 \subsection{Source Data Model}
 Text Explanation here\\
-\includegraphics[scale=0.3]{resources/dbmap_access}\\[1cm] 
+\includegraphics[scale=0.5]{resources/dbmap_access}\\[1cm] 
 Text Explanation here\\
-\includegraphics[scale=0.3]{resources/IU_access}\\[1cm] 
+\includegraphics[scale=0.5]{resources/IU_access}\\[1cm] 
 \subsection{Intermediate Model}
-\includegraphics[scale=0.3]{resources/Inter_schedule}\\[1cm] 
+\includegraphics[scale=0.5]{resources/Inter_schedule}\\[1cm] 
 Text Explanation here\\
-\includegraphics[scale=0.3]{resources/Inter_runs}\\[1cm] 
+\includegraphics[scale=0.5]{resources/Inter_runs}\\[1cm] 
 Text Explanation here\\
 \subsection{Final Data Model}
 Text Explanation here\\
-\includegraphics[scale=0.3]{resources/Source_spring}\\[1cm] 
+\includegraphics[scale=0.5]{resources/Source_spring}\\[1cm] 
 Text Explanation here\\
-\includegraphics[scale=0.3]{resources/wh}\\[1cm] 
+\includegraphics[scale=0.5]{resources/wh}\\[1cm] 
 \subsection{Data Preparation}
+Text Explanation here\\
+%\includegraphics[scale=0.6]{resources/hierarchy}\\[1cm] 
 \section{Exploratory Analysis}
+Text Explanation here\\
+\includegraphics[scale=0.6]{resources/ggplot1}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.6]{resources/ggplot2}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.6]{resources/ggplot3}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.6]{resources/ggplot4}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.6]{resources/ggplot5}\\[1cm] 
 \section{Reporting}
+Text Explanation here\\
+\includegraphics[scale=0.55]{resources/tableau4}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.55]{resources/tableau5}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.55]{resources/tableau6}\\[1cm] 
 \section{Visualization}
-\section{Statistical Model}
+Text Explanation here\\
+\includegraphics[scale=1]{resources/neo4j1}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=1]{resources/neo4j2}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.55]{resources/neo4j3}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.55]{resources/tableau1}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.55]{resources/tableau2}\\[1cm] 
+Text Explanation here\\
+\includegraphics[scale=0.55]{resources/tableau3}\\[1cm] \section{Statistical Model}
 \section{Future Work}
 \section{Concluding remarks}
 \section{References}
